Fix code blocks on mobile browsers.
Thanks to kirbyfan64sos on Reddit: https://www.reddit.com/r/programming/comments/4fbizh/futhark_is_a_dataparallel_pure_functional/d27jk8n

--- a/css/default.css
+++ b/css/default.css
@@ -25,7 +25,8 @@ h3 {
 
 pre {
     padding:1em;
-    background-color:#f5f5f5
+    background-color:#f5f5f5;
+    overflow-x: scroll;
 }
 
 a {
